--- a/favorite-things.html
+++ b/favorite-things.html
@@ -11,10 +11,13 @@
   <p>Here are some of my favorite people!</p>
   <ul>
     <li>My brother Christopher</li>
-    <li>My mom and dad:
+    <li> <img src="tab1.jpg" alt="Picture of my Parents">
+      My mom and dad:
       <ul>
         <li>Steve</li>
         <li>Carol</li>
+
+        
       </ul>
     </li>
     <li>My friend Jessica</li>
