--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>My first web page</h1>
-  <h2>Written with the guidance of Acedu</h2>
-  <p>This is my first web page!</p>
+  <h2>Written with the guidance of<em> Acedu</em></h2>
+  <p>This is my <strong>first web page</strong>!</p>
   <p>Isn't it nice?</p>
 
   <p>
@@ -22,5 +22,9 @@
     <li>JavaScript</li>
     <li>And a lot more!</li>
   </ul>
+  <img src="http://www.acedu.camp/Portals/0/Logo.png?ver=2018-09-21-084138-787"  alt="A photo of acedu logo.">
+
+  <p>Check out <a href="http://www.acedu.camp/">Acedu</a>. It's a great school for learning web programming!</p>
+  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
 </body>
 </html>
