--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Bayo's favorite things</title>
 </head>
 <body>
@@ -8,6 +9,7 @@
   <h2>These are a few of my favorite things.</h2>
 
   <h3>People</h3>
+
   <p>Here are some of my favorite people!</p>
   <ul>
     <li>My brother Christopher</li>
@@ -17,7 +19,7 @@
         <li>Steve</li>
         <li>Carol</li>
 
-        
+
       </ul>
     </li>
     <li>My friend Jessica</li>
